more uart stuff

--- a/DWSTM32/uart01/Makefile
+++ b/DWSTM32/uart01/Makefile
@@ -45,6 +45,7 @@ uart01.gcc.thumb.flash.bin : flash.ld flash.o uart01.gcc.thumb.o
 uart01.gcc.thumb.sram.bin : sram.ld sram.o uart01.gcc.thumb.o
 	$(ARMGNU)-ld -o uart01.gcc.thumb.sram.elf -T sram.ld sram.o uart01.gcc.thumb.o
 	$(ARMGNU)-objdump -D uart01.gcc.thumb.sram.elf > uart01.gcc.thumb.sram.list
+	$(ARMGNU)-objcopy uart01.gcc.thumb.sram.elf uart01.gcc.thumb.sram.hex -O ihex
 	$(ARMGNU)-objcopy uart01.gcc.thumb.sram.elf uart01.gcc.thumb.sram.bin -O binary
 
 #---------------------------------
@@ -76,6 +77,7 @@ uart01.clang.thumb.norm.sram.bin : sram.ld sram.o uart01.clang.bc
 	llc $(LLCOPS) uart01.clang.bc -filetype=obj -o uart01.clang.thumb.norm.o
 	$(ARMGNU)-ld -o uart01.clang.thumb.norm.sram.elf -T sram.ld sram.o uart01.clang.thumb.norm.o
 	$(ARMGNU)-objdump -D uart01.clang.thumb.norm.sram.elf > uart01.clang.thumb.norm.sram.list
+	$(ARMGNU)-objcopy uart01.clang.thumb.norm.sram.elf uart01.clang.thumb.norm.sram.hex -O ihex
 	$(ARMGNU)-objcopy uart01.clang.thumb.norm.sram.elf uart01.clang.thumb.norm.sram.bin -O binary
 
 uart01.clang.thumb.opt.sram.bin : sram.ld sram.o uart01.clang.bc
@@ -85,6 +87,7 @@ uart01.clang.thumb.opt.sram.bin : sram.ld sram.o uart01.clang.bc
 	llc $(LLCOPS) uart01.clang.thumb.opt.bc -filetype=obj -o uart01.clang.thumb.opt.o
 	$(ARMGNU)-ld -o uart01.clang.thumb.opt.sram.elf -T sram.ld sram.o uart01.clang.thumb.opt.o
 	$(ARMGNU)-objdump -D uart01.clang.thumb.opt.sram.elf > uart01.clang.thumb.opt.sram.list
+	$(ARMGNU)-objcopy uart01.clang.thumb.opt.sram.elf uart01.clang.thumb.opt.sram.hex -O ihex
 	$(ARMGNU)-objcopy uart01.clang.thumb.opt.sram.elf uart01.clang.thumb.opt.sram.bin -O binary
 
 
