messed with the fpu a little, checked the fpu features registers

--- a/NUCLEO-F767ZI/cpuid/Makefile
+++ b/NUCLEO-F767ZI/cpuid/Makefile
@@ -2,7 +2,7 @@
 ARMGNU = arm-none-eabi
 
 XCPUx = -mcpu=cortex-m0
-XCPU = -mcpu=cortex-m7
+XCPU = -mcpu=cortex-m7 -mfpu=fpv5-d16 -mfloat-abi=hard
 
 AOPS = --warn --fatal-warnings $(XCPU)
 COPS = -Wall -O2 -nostdlib -nostartfiles -ffreestanding $(XCPU)
