--- a/STM32F103C8T6/blinker01/Makefile
+++ b/STM32F103C8T6/blinker01/Makefile
@@ -2,11 +2,12 @@
 ARMGNU = arm-none-eabi
 #ARMGNU = arm-linux-gnueabi
 
-AOPS = --warn --fatal-warnings -mcpu=cortex-m3
+AOPS = --warn --fatal-warnings 
+ -mcpu=cortex-m3
 COPS = -Wall -Werror -O2 -nostdlib -nostartfiles -ffreestanding 
  -mcpu=cortex-m0
 
-all : blinker01.thumb.bin blinker01.thumb2.bin
+all : blinker01.thumb.bin blinker01.thumb.dfu.bin blinker01.thumb2.bin blinker01.thumb2.dfu.bin
 
 clean:
 	rm -f *.bin
@@ -38,4 +39,17 @@ blinker01.thumb2.bin : flash.ld flash.o blinker01.thumb2.o
 	$(ARMGNU)-ld -o blinker01.thumb2.elf -T flash.ld flash.o blinker01.thumb2.o
 	$(ARMGNU)-objdump -D blinker01.thumb2.elf > blinker01.thumb2.list
 	$(ARMGNU)-objcopy blinker01.thumb2.elf blinker01.thumb2.bin -O binary
+
+
+blinker01.thumb.dfu.bin : flashdfu.ld flash.o blinker01.thumb.o
+	$(ARMGNU)-ld -o blinker01.thumb.dfu.elf -T flashdfu.ld flash.o blinker01.thumb.o
+	$(ARMGNU)-objdump -D blinker01.thumb.dfu.elf > blinker01.thumb.dfu.list
+	$(ARMGNU)-objcopy blinker01.thumb.dfu.elf blinker01.thumb.dfu.bin -O binary
+
+blinker01.thumb2.dfu.bin : flashdfu.ld flash.o blinker01.thumb2.o
+	$(ARMGNU)-ld -o blinker01.thumb2.dfu.elf -T flashdfu.ld flash.o blinker01.thumb2.o
+	$(ARMGNU)-objdump -D blinker01.thumb2.dfu.elf > blinker01.thumb2.dfu.list
+	$(ARMGNU)-objcopy blinker01.thumb2.dfu.elf blinker01.thumb2.dfu.bin -O binary
+
+
 
