--- a/NUCLEO-H745ZI-Q/target.cfg
+++ b/NUCLEO-H745ZI-Q/target.cfg
@@ -5,7 +5,7 @@ hla_device_desc "ST-LINK"
 hla_vid_pid 0x0483 0x3744 0x0483 0x3748 0x0483 0x374b 0x0483 0x374d 0x0483 0x374e 0x0483 0x374f 0x0483 0x3752 0x0483 0x3753
 
 
-#set DUAL_BANK 1
+set DUAL_BANK 1
 # not supported under hla
 #set DUAL_CORE 1
 
