--- a/STM32F042K6T6/gps_clock_generic/Makefile
+++ b/STM32F042K6T6/gps_clock_generic/Makefile
@@ -3,7 +3,8 @@ ARMGNU = arm-none-eabi
 #ARMGNU = arm-linux-gnueabi
 
 AOPS = --warn --fatal-warnings -mcpu=cortex-m0
-COPS = -Wall -Werror -O2 -nostdlib -nostartfiles -ffreestanding  -mcpu=cortex-m0
+COPS = -Wall -O2 -nostdlib -nostartfiles -ffreestanding 
+ -mcpu=cortex-m0
 
 all : notmain.bin
 
@@ -12,18 +13,19 @@ clean:
 	rm -f *.o
 	rm -f *.elf
 	rm -f *.list
+	rm -f buildheader
 
 #---------------------------------
+
 
 flash.o : flash.s
 	$(ARMGNU)-as $(AOPS) flash.s -o flash.o
 
 notmain.o : notmain.c
-	$(ARMGNU)-gcc $(COPS) -mthumb -c notmain.c -o notmain.o
+	$(ARMGNU)-gcc $(COPS) -mthumb -mcpu=cortex-m0 -march=armv6-m -c notmain.c -o notmain.o
 
 notmain.bin : flash.ld flash.o notmain.o
 	$(ARMGNU)-ld -o notmain.elf -T flash.ld flash.o notmain.o
 	$(ARMGNU)-objdump -D notmain.elf > notmain.list
 	$(ARMGNU)-objcopy notmain.elf notmain.bin -O binary
-
 
