--- a/STM32L010K4T6/uart01/Makefile
+++ b/STM32L010K4T6/uart01/Makefile
@@ -3,7 +3,7 @@ ARMGNU = arm-none-eabi
 #ARMGNU = arm-linux-gnueabi
 
 AOPS = --warn --fatal-warnings -mcpu=cortex-m0
-COPS = -Wall -Werror -O2 -nostdlib -nostartfiles -ffreestanding  -mcpu=cortex-m0
+COPS = -Wall -O2 -nostdlib -nostartfiles -ffreestanding  -mcpu=cortex-m0
 
 all : notmain.bin
 
