--- a/NUCLEO-F767ZI/blinker00/Makefile
+++ b/NUCLEO-F767ZI/blinker00/Makefile
@@ -3,6 +3,7 @@
 ARMGNU ?= arm-linux-gnueabi
 
 AOPS = --warn --fatal-warnings
+LOPS = -nostdlib -nostartfiles
 
 all : notmain.bin
 
@@ -15,7 +16,7 @@ clean:
 flash.o : flash.s
 	$(ARMGNU)-as $(AOPS) flash.s -o flash.o
 
-notmain.bin :       flash.ld flash.o
-	$(ARMGNU)-ld -T flash.ld flash.o -o notmain.elf
+notmain.bin :               flash.ld flash.o
+	$(ARMGNU)-ld $(LOPS) -T flash.ld flash.o -o notmain.elf
 	$(ARMGNU)-objdump -D notmain.elf > notmain.list
 	$(ARMGNU)-objcopy -O binary notmain.elf notmain.bin
