--- a/NUCLEO-F767ZI/blinker01/Makefile
+++ b/NUCLEO-F767ZI/blinker01/Makefile
@@ -2,11 +2,12 @@
 #ARMGNU ?= arm-none-eabi
 ARMGNU ?= arm-linux-gnueabi
 
-XCPU = -mcpu=cortex-m0
-XCPUx = -mcpu=cortex-m7
+xCPU = -mcpu=cortex-m0
+XCPU = -mcpu=cortex-m7
 
 AOPS = --warn --fatal-warnings $(XCPU)
-COPS = -Wall -O2 -nostdlib -nostartfiles -ffreestanding $(XCPU)
+COPS = -Wall -O2 -ffreestanding $(XCPU)
+LOPS = -nostdlib -nostartfiles
 
 all : notmain.bin
 
@@ -22,8 +23,7 @@ flash.o : flash.s
 notmain.o : notmain.c
 	$(ARMGNU)-gcc $(COPS) -mthumb -c notmain.c -o notmain.o
 
-notmain.bin :       flash.ld flash.o notmain.o
-	$(ARMGNU)-ld -T flash.ld flash.o notmain.o -o notmain.elf
+notmain.bin :               flash.ld flash.o notmain.o
+	$(ARMGNU)-ld $(LOPS) -T flash.ld flash.o notmain.o -o notmain.elf
 	$(ARMGNU)-objdump -D notmain.elf > notmain.list
 	$(ARMGNU)-objcopy -O binary notmain.elf notmain.bin
-
