--- a/NUCLEO-F767ZI/blinker06/Makefile
+++ b/NUCLEO-F767ZI/blinker06/Makefile
@@ -1,11 +1,13 @@
 
-ARMGNU = arm-none-eabi
+#ARMGNU ?= arm-none-eabi
+ARMGNU ?= arm-linux-gnueabi
 
-XCPUx = -mcpu=cortex-m0
+xCPU = -mcpu=cortex-m0
 XCPU = -mcpu=cortex-m7
 
 AOPS = --warn --fatal-warnings $(XCPU)
-COPS = -Wall -O2 -nostdlib -nostartfiles -ffreestanding $(XCPU)
+COPS = -Wall -O2 -ffreestanding $(XCPU)
+LOPS = -nostdlib -nostartfiles
 
 all : notmain.bin
 
@@ -15,16 +17,13 @@ clean:
 	rm -f *.elf
 	rm -f *.list
 
-#---------------------------------
-
 flash.o : flash.s
 	$(ARMGNU)-as $(AOPS) flash.s -o flash.o
 
 notmain.o : notmain.c
 	$(ARMGNU)-gcc $(COPS) -mthumb -c notmain.c -o notmain.o
 
-notmain.bin : flash.ld flash.o notmain.o
-	$(ARMGNU)-ld -o notmain.elf -T flash.ld flash.o notmain.o
+notmain.bin :               flash.ld flash.o notmain.o
+	$(ARMGNU)-ld $(LOPS) -T flash.ld flash.o notmain.o -o notmain.elf
 	$(ARMGNU)-objdump -D notmain.elf > notmain.list
-	$(ARMGNU)-objcopy notmain.elf notmain.bin -O binary
-
+	$(ARMGNU)-objcopy -O binary notmain.elf notmain.bin
